# grapharch

./: .editorconfig  .env  .gitignore  .justfile  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Gemfile  LICENSE  README.md  clippy.toml  cog.toml  grapharch.code-workspace  rust-toolchain.toml
.cargo/: .cursorignore
.cursor/rules/: read-architecture-doc.mdc  rust-rules.mdc
.github/: CODEOWNERS
.github/workflows/: audit-dependencies.yml  check-commits.yml  pages-ci.yml  pages.yml  release-changelog.yml  rust-ci.yml
.just/: test.just  user-docs.just
.just/install/: ruby-gem.just  ruby.just  sentinel.just  ssl-keys.just
docs/: .gitignore  .jekyll-metadata  404.html  CNAME  Gemfile  LICENSE.md  README.md  _config.yml  index.md  install.sh  serve.sh  status.md
docs/contribute/: README.md  contribute-code.md  git-setup.md  jekyll.md  macos.md  rust.md
docs/design-goal/: README.md
docs/design-goals/: README.md
docs/feature/: README.md  general-business-oriented-profiling.md  general-ontology-precision.md  source-cypher.md  source-git-repo.md  source-graphql.md  source-sparql-endpoint.md  source-sql.md  target-markdown-for-mkdocs.md  target-rst-for-sphinx.md  target-typst.md
docs/feature/format/: README.md
docs/feature/general/: README.md  general-business-oriented-profiling.md  general-flexible-output-formats.md  general-onboard-graph-engine.md
docs/feature/source/: README.md  source-endpoint-cypher.md  source-endpoint-git-repo.md  source-endpoint-graphql.md  source-endpoint-gsql.md  source-endpoint-sparql.md  source-endpoint-sql.md  source-file-markdown.md  source-file-rdf.md
docs/features/: README.md
docs/features/documentable-things/: README.md
docs/features/formats/: README.md
docs/features/general/: README.md  business-oriented-profiling.md  flexible-output-formats.md  onboard-graph-engine.md  ontology-precision.md
docs/features/sources/: README.md
docs/features/targets/: README.md  markdown-for-mkdocs.md  typst.md
docs/ontology/: README.md
docs/other/: LICENSE.md  README.md  status.md
docs/other/architecture/: README.md
docs/other/contribute/: README.md  contribute-code.md  git-commit.md  jekyll.md  rust-install.md  rust.md
docs/other/ontology/: README.md  (+2 more)
docs/overview/: README.md
docs/pages/: README.md
docs/usage/: README.md  getting-started.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs  this.rs
src/documentor/: documentor.rs  mod.rs  this.rs
src/generator/: generator.rs  mod.rs  this.rs
src/loader/: loader.rs  mod.rs  this.rs
src/model/: book.rs  chapter.rs  doc_model.rs  element.rs  mod.rs  section.rs  this.rs
src/output/: mod.rs  typst.rs
src/rdf_const/: classes.rs  data_types.rs  graphs.rs  mod.rs  namespaces.rs  predicates.rs
src/source/: file_source.rs  mod.rs  owl.rs
src/store/: loader_store.rs  mod.rs
src/util/: file.rs  file_type.rs  mod.rs  paths.rs  rdf_load.rs  tracing.rs
(+56 files in other folders)
