[package]
name = "grapharch"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"

[dependencies]
oxigraph = "0.4.4"
oxrdf = "0.2.3"
oxrdfio = { version = "0.1.3", features = ["async-tokio"] }
oxttl = { version = "0.1.3", features = ["async-tokio"] }
anyhow = "1.0.41"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.4.0"
tokio-util = "0.7.12"
futures = "0.3"
