[package]
name = "grapharch"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"

[dependencies]
oxigraph = "0.4.4"
oxrdf = "0.2.3"
oxrdfio = { version = "0.1.3", features = ["async-tokio"] }
oxttl = { version = "0.1.3", features = ["async-tokio"] }
anyhow = "1.0.41"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.4.0"
tokio-util = "0.7.12"
futures = "0.3"
aws-sdk-s3 = "1.20.0"
async-trait = "0.1"
git2 = "0.19.0"
tempfile = "3.8.0"
ignore = "0.4.23"
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.1"
sha2 = "0.10.0"
lazy_static = "1.4.0"
const_format = "0.2.4"
